deployments/walle-namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: walle
  labels:
    name: walle
