deployments/api-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
  namespace: walle
spec:
  selector:
    matchLabels:
      app: api-server
  replicas: 1
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
        - name: api-server
          image: "yubinnng/walle-api-server"
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-server
  namespace: walle
spec:
  selector:
    app: api-server
  ports:
    - port: 8080
