deployments/nats.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
  namespace: walle
spec:
  selector:
    matchLabels:
      app: nats
  replicas: 1
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: "nats:alpine"
          ports:
            - containerPort: 4222
---
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: walle
spec:
  selector:
    app: nats
  ports:
    - port: 4222
