deployments/ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: walle
spec:
  selector:
    matchLabels:
      app: ui
  replicas: 1
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: "yubinnng/walle-ui"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: walle
spec:
  selector:
    app: ui
  ports:
    - port: 80
